<resources>
    <string name="app_name">Task Manager App</string>
    <string name="task_manager">Task Manager</string>
    <string name="_continue">Continue</string>
    <string name="skip">Skip ></string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="counter">1/5</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="next">Next</string>
    <string name="register_for_extra_benefits">Register for\nExtra benefits</string>
    <string name="register_with_email">Register with email</string>
    <string name="register_with_google">Register with Google</string>
    <string name="register_with_facebook">Register with Facebook</string>
    <string name="register_with_phone_no">Register with Phone No.</string>
    <string name="already_have_an_account">Already have an account? Then Login</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="login_with_email">Login with email</string>
    <string name="login_with_google">Login with Google</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_with_phone_no">Login with Phone No.</string>
    <string name="not_a_member">Not a member? Then Register</string>
    <string name="enter_your_email">Enter your email address</string>
    <string name="enter_your_phone_no">Enter your phone number</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sendOtp">Send OTP</string>
    <string name="_91">🇮🇳+91</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="logout">Logout</string>
    <string name="register_benefits">Register Benefits</string>
    <string name="view">View</string>
    <string name="sort">Sort</string>
    <string name="search">Search</string>
    <string name="select">Select</string>
    <string name="tasks">Tasks</string>
    <string name="calendar">Calendar</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="bottom_bar_desc">This is SmoothBottomNavBar</string>
    <string name="eisenhower_matrix">Eisenhower Matrix</string>
    <string name="pomodoro_timer">Pomodoro Timer</string>
    <string name="overdue_tasks">Overdue Tasks</string>
    <string name="completed_tasks">Completed Tasks</string>
    <string name="empty_tasks1">No tasks today</string>
    <string name="empty_tasks2">Relax and take a break</string>
    <string name="today">Today</string>
    <string name="fab_desc">This button is use to add the tasks</string>
    <string name="add_tasks">Add Tasks</string>
    <string name="what_would_you_like_to_do">What would you like to do?</string>
    <string name="save">Save</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="arrow"><![CDATA[>]]></string>
    <string name="this_feature_is_under_development">This feature is under development</string>
    <string name="default_timer">00:00:00</string>
    <string name="go_to_tasks">Go to Tasks</string>

</resources>