<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/search"
        android:title="@string/search"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_search"
        />

    <item
        android:id="@+id/select"
        android:title="@string/select"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_select"
        />

    <item
        android:id="@+id/view"
        android:title="@string/view"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_view"
        />

    <item
        android:id="@+id/sort"
        android:title="@string/sort"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_sort"
        />

    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        app:showAsAction="collapseActionView"
        android:icon="@drawable/ic_settings"
        />

    <item
        android:id="@+id/logout"
        android:title="@string/logout"
        app:showAsAction="collapseActionView"
        android:icon="@drawable/ic_logout"
        />

</menu>