<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.auth.RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/registerImg"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginTop="70dp"
            app:layout_constraintBottom_toTopOf="@id/registerTxt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/app_logo" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/registerTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/largeMargin"
            android:text="@string/register_for_extra_benefits"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/text_color"
            android:textSize="@dimen/headingTextSize"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/registerImg" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/registerWithEmailBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/largeMargin"
            android:layout_marginTop="120dp"
            android:layout_marginEnd="@dimen/largeMargin"
            android:background="@drawable/orange_btn_bg"
            android:padding="@dimen/largePadding"
            android:text="@string/register_with_email"
            android:textAllCaps="false"
            android:textColor="@color/text_color"
            android:textSize="@dimen/largeTextSize"
            app:layout_constraintBottom_toTopOf="@id/registerWithPhoneNoBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/registerTxt" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/registerWithPhoneNoBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/largeMargin"
            android:layout_marginTop="@dimen/xlargeMargin"
            android:layout_marginEnd="@dimen/largeMargin"
            android:background="@drawable/orange_btn_stroke"
            android:padding="@dimen/largePadding"
            android:text="@string/register_with_phone_no"
            android:textAllCaps="false"
            android:textColor="@color/text_color"
            android:textSize="@dimen/largeTextSize"
            app:layout_constraintBottom_toTopOf="@id/registerWithGoogleBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/registerWithEmailBtn" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/registerWithGoogleBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/largeMargin"
            android:layout_marginTop="@dimen/xlargeMargin"
            android:layout_marginEnd="@dimen/largeMargin"
            android:background="@drawable/orange_btn_stroke"
            android:padding="@dimen/largePadding"
            android:text="@string/register_with_google"
            android:textAllCaps="false"
            android:textColor="@color/text_color"
            android:textSize="@dimen/largeTextSize"
            app:layout_constraintBottom_toTopOf="@id/registerWithFacebookBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/registerWithPhoneNoBtn" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/registerWithFacebookBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/largeMargin"
            android:layout_marginTop="@dimen/xlargeMargin"
            android:layout_marginEnd="@dimen/largeMargin"
            android:background="@drawable/orange_btn_stroke"
            android:padding="@dimen/largePadding"
            android:text="@string/register_with_facebook"
            android:textAllCaps="false"
            android:textColor="@color/text_color"
            android:textSize="@dimen/largeTextSize"
            app:layout_constraintBottom_toTopOf="@id/goToLoginTxt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/registerWithGoogleBtn" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/goToLoginTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/largeMargin"
            android:text="@string/already_have_an_account"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/text_color"
            android:textSize="@dimen/smallTextSize"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/registerWithFacebookBtn" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>