<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/mediumPadding">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/onboardImg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/xlargeMargin"
        android:background="@drawable/rounded_img_bg_for_onboard"
        android:clipToOutline="true"
        android:scaleType="fitXY"
        android:src="@drawable/task_manager"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UnusedAttribute" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/onboardTitleTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/xlargeMargin"
        android:textAllCaps="false"
        android:textColor="@color/text_color"
        android:textSize="@dimen/xxlargeTextSize"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/onboardImg"
        tools:text="@string/title" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/onboardDescriptionTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="@dimen/largeMargin"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/gray"
        android:textSize="@dimen/largeTextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/onboardTitleTxt"
        tools:text="@string/description" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/onboardCounterTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/xlargeMargin"
        android:layout_marginTop="@dimen/largeMargin"
        android:layout_marginEnd="@dimen/xlargeMargin"
        android:text="@string/counter"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/gray"
        android:textSize="@dimen/mediumTextSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/onboardDescriptionTxt" />

</androidx.constraintlayout.widget.ConstraintLayout>